latex_parser.py: stored config in JSON file
- split config out of _namespace dictionary and into _property
- moved DRV_TYPE specification into ASSIGN macro (from DEFINE)
- fixed issue with numeric indexing removing tensor information
- added priority system for DRV_TYPE to improve robustness
- moved scalar behavior (zero rank) into _tensor method
- added load_config(), save_config(), and reset_config()

--- a/Tutorial-LaTeX_Parser_Interface.ipynb
+++ b/Tutorial-LaTeX_Parser_Interface.ipynb
@@ -327,7 +327,7 @@
     }
    ],
    "source": [
-    "try: parse_expr(r'\\int_0^5 2x^2\\,dx')\n",
+    "try: parse_expr(r'\\int_0^5 2x^2dx')\n",
     "except ParseError as err:\n",
     "    print('ParseError: %s' % err)"
    ]
@@ -610,7 +610,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('FUU', 'gUU', 'gDD', 'JU', 'FUU_dD', 'GammaUDD', 'gDD_dD', 'FUU_cdD')\n"
+      "('FUU', 'gUU', 'gDD', 'FUU_dD', 'gDD_dD', 'GammaUDD', 'FUU_cdD', 'JU')\n"
      ]
     }
    ],
@@ -647,7 +647,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('FUU', 'ghatUU', 'ghatDD', 'JU', 'FUU_dD', 'GammahatUDD', 'ghatDD_dD', 'FUU_cdhatD')\n"
+      "('FUU', 'ghatUU', 'ghatDD', 'FUU_dD', 'ghatDD_dD', 'GammahatUDD', 'FUU_cdhatD', 'JU')\n"
      ]
     }
    ],
@@ -1303,7 +1303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ParseError: inconsistent indexing range for index 'mu'\n"
+      "ParseError: inconsistent dimension for index 'mu'\n"
      ]
     }
    ],
@@ -1352,47 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:10.557669Z",
-     "iopub.status.busy": "2020-12-17T02:05:10.557265Z",
-     "iopub.status.idle": "2020-12-17T02:05:10.559321Z",
-     "shell.execute_reply": "2020-12-17T02:05:10.559654Z"
-    },
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ParseError: T_{\\mu\\nu} = \\partial_\\nu v_\\mu\n",
-      "                                      ^\n",
-      "cannot differentiate undefined tensor 'vD' at position 57\n"
-     ]
-    }
-   ],
-   "source": [
-    "try:\n",
-    "    parse(r\"\"\"\n",
-    "        % define deriv numeric\n",
-    "        T_{\\mu\\nu} = \\partial_\\nu v_\\mu\n",
-    "    \"\"\")\n",
-    "except ParseError as err:\n",
-    "    print('ParseError: %s' % err)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:10.573602Z",
-     "iopub.status.busy": "2020-12-17T02:05:10.571387Z",
-     "iopub.status.idle": "2020-12-17T02:05:10.575914Z",
-     "shell.execute_reply": "2020-12-17T02:05:10.575391Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1416,15 +1376,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:10.581076Z",
-     "iopub.status.busy": "2020-12-17T02:05:10.580570Z",
-     "iopub.status.idle": "2020-12-17T02:05:10.582917Z",
-     "shell.execute_reply": "2020-12-17T02:05:10.582472Z"
-    }
-   },
+   "execution_count": 37,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1448,15 +1401,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:10.596192Z",
-     "iopub.status.busy": "2020-12-17T02:05:10.594743Z",
-     "iopub.status.idle": "2020-12-17T02:05:10.598472Z",
-     "shell.execute_reply": "2020-12-17T02:05:10.597965Z"
-    }
-   },
+   "execution_count": 38,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1493,28 +1439,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:10.600959Z",
-     "iopub.status.busy": "2020-12-17T02:05:10.600446Z",
-     "iopub.status.idle": "2020-12-17T02:05:13.454738Z",
-     "shell.execute_reply": "2020-12-17T02:05:13.454256Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Created Tutorial-LaTeX_Parser_Interface.tex, and compiled LaTeX file to PDF\n",
-      "    file Tutorial-LaTeX_Parser_Interface.pdf\n"
-     ]
-    }
-   ],
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-LaTeX_Parser_Interface\")"
+    "# import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "# cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-LaTeX_Parser_Interface\")"
    ]
   }
  ],
@@ -1535,7 +1465,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.0"
   },
   "mimetype": "text/x-python",
   "name": "python",
