latex_parser.py: fixed merge conflict with master branch

--- a/Tutorial-LaTeX_Parser_Interface.ipynb
+++ b/Tutorial-LaTeX_Parser_Interface.ipynb
@@ -405,7 +405,7 @@
        "(Tensor(hUD, 4D), Scalar(h))"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -469,7 +469,7 @@
        "('gDD', 'gUU', 'vD', 'vU')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -533,7 +533,7 @@
        "('epsilonDDD', 'vU', 'wU', 'uD')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,18 +773,7 @@
      "shell.execute_reply": "2020-12-17T02:05:09.823090Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('GammaUDD', 'RUDDD', 'RUUUU', 'RDDDD', 'K', 'RDD', 'R', 'GDD')"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "parse(r\"\"\"\n",
     "    % define basis [t, r, \\theta, \\phi]\n",
@@ -826,7 +815,7 @@
        "[0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,18 +1063,7 @@
      "shell.execute_reply": "2020-12-17T02:05:10.268770Z"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('gammaDD', 'gammaUU', 'gammadet', 'betaD', 'alpha', 'betaD_cdD', 'KDD')"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "parse(r\"\"\"\n",
     "    % define basis [r, \\theta, \\phi]\n",
@@ -1441,10 +1419,19 @@
    "cell_type": "code",
    "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Tutorial-LaTeX_Parser_Interface.tex, and compiled LaTeX file to PDF\n",
+      "    file Tutorial-LaTeX_Parser_Interface.pdf\n"
+     ]
+    }
+   ],
    "source": [
-    "# import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "# cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-LaTeX_Parser_Interface\")"
+    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-LaTeX_Parser_Interface\")"
    ]
   }
  ],
