--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -47,19 +47,22 @@
     "    + [Adding Unit Tests](Tutorial-UnitTesting.ipynb) (*Courtesy Kevin Lituchy*)\n",
     "\n",
     "### PART 2: Basic Physics Applications \n",
-    "##### Using NRPy+ to Numerically Solve PDEs\n",
+    "##### Using NRPy+ to Numerically Solve the Scalar Wave Equation in Cartesian Coordinates\n",
     "+ Application: [The Scalar **Wave Equation** in Cartesian Coordinates](Tutorial-ScalarWave.ipynb)\n",
     "    + **Start-to-Finish Example**: [Numerically Solving the Scalar Wave Equation: A Complete C Code](Tutorial-Start_to_Finish-ScalarWave.ipynb)\n",
     "    + Solving the Wave Equation with the <font color='green'>**Einstein Toolkit**</font> (*Courtesy Patrick Nelson & Terrence Pierre Jacques*)\n",
     "        + [<font color='green'>**IDScalarWaveNRPy**</font>: Initial data for the scalar wave equation](Tutorial-ETK_thorn-IDScalarWaveNRPy.ipynb) \n",
     "        + [<font color='green'>**WaveToyNRPy**</font>: Solving the scalar wave equation, using the method of lines](Tutorial-ETK_thorn-WaveToyNRPy.ipynb)\n",
     "\n",
-    "<html>\n",
-    "<!-- + Application (<font color='red'>**in progress**</font>): [Two Formulations of **Maxwell's Equations** in Cartesian Coordinates](Tutorial-MaxwellCartesian.ipynb). (Formulations based on [Illustrating Stability Properties of Numerical Relativity in Electrodynamics](https://arxiv.org/abs/gr-qc/0201051) by Knapp, Walker, and Baumgarte.) (*Courtesy Patrick Nelson*)\n",
-    "    + [<font color='green'>**IDMaxwellNRPy**</font>: An <font color='green'>**Einstein Toolkit**</font> initial data thorn for Maxwell's equations](Tutorial-ETK_thorn-IDMaxwellNRPy.ipynb)\n",
-    "    + [<font color='green'>**MaxwellEvol**</font>: Solving Maxwell's equations in the <font color='green'>**Einstein Toolkit**</font> using the method of lines](Tutorial-ETK_thorn-MaxwellEvol.ipynb)\n",
-    "-->\n",
-    "</html>\n",
+    "##### Using NRPy+ to Numerically Solve Maxwell's Equations\n",
+    "+ Application: [**Maxwell's Equations** in Cartesian Coordinates](Tutorial-VacuumMaxwell_formulation_Cartesian.ipynb)\n",
+    "    + **Start-to-Finish Example**: [Numerically Solving Maxwell's Equations: A Complete C Code](Tutorial-Start_to_Finish-Solving_Maxwells_Equations_in_Vacuum-Cartesian.ipynb) (*Courtesy Terrence Pierre Jacques*)\n",
+    "    + Solving Maxwell's Equations with the <font color='green'>**Einstein Toolkit**</font> (*Courtesy Terrence Pierre Jacques & Patrick Nelson*)\n",
+    "        + [<font color='green'>**MaxwellVacuumID**</font>: An initial data thorn for Maxwell's equations](Tutorial-ETK_thorn-MaxwellVacuumID.ipynb)\n",
+    "        + [<font color='green'>**MaxwellVacuum**</font>: Solving Maxwell's equations in the using the method of lines](Tutorial-ETK_thorn-MaxwellVacuum.ipynb)\n",
+    "        \n",
+    "+ Application: [Maxwell's Equations in Curvilinear Coordinates, using a Reference Metric](Tutorial-VacuumMaxwell_formulation_Curvilinear.ipynb) (*Courtesy Terrence Pierre Jacques*)\n",
+    "    + **Start-to-Finish Example**: [Numerically Solving Maxwell's Equations in Curvilinear Coordinates: A Complete C Code](Tutorial-Start_to_Finish-Solving_Maxwells_Equations_in_Vacuum-Curvilinear.ipynb)\n",
     "\n",
     "##### Diagnostic Notebooks: Gravitational Wave Extraction in Cartesian coordinates\n",
     "+ Application: [All Weyl scalars and invariants in Cartesian Coordinates](Tutorial-WeylScalarsInvariants-Cartesian.ipynb) (*Courtesy Patrick Nelson*)\n",
@@ -145,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
