Undo deletion of old Maxwell files

--- a/Tutorial-MaxwellCartesian.ipynb
+++ b/Tutorial-MaxwellCartesian.ipynb
@@ -71,22 +71,15 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:19.853557Z",
-     "iopub.status.busy": "2020-12-17T02:05:19.849449Z",
-     "iopub.status.idle": "2020-12-17T02:05:20.161802Z",
-     "shell.execute_reply": "2020-12-17T02:05:20.161274Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Step P1: Import needed Python modules\n",
-    "import NRPy_param_funcs as par   # NRPy+: Parameter interface\n",
-    "import sympy as sp               # SymPy: The Python computer algebra package upon which NRPy+ depends\n",
-    "import indexedexp as ixp         # NRPy+: Symbolic indexed expression (e.g., tensors, vectors, etc.) support\n",
-    "import finite_difference as fin  # NRPy+: Finite difference C code generation module\n",
-    "import grid as gri               # NRPy+: Functions having to do with numerical grids\n",
+    "import NRPy_param_funcs as par\n",
+    "import indexedexp as ixp\n",
+    "import grid as gri\n",
+    "import finite_difference as fin\n",
+    "from outputC import *\n",
     "\n",
     "#Step P2: Name this Python module\n",
     "thismodule = \"MaxwellCartesian\"\n",
@@ -110,7 +103,7 @@
     "psi_dD = ixp.declarerank1(\"psi_dD\")\n",
     "x,y,z = gri.register_gridfunctions(\"AUX\",[\"x\",\"y\",\"z\"])\n",
     "\n",
-    "## Step 3b: Declare the conformal metric tensor and its first\n",
+    "## Step 3b: Declare the conformal metric tensor and its first \n",
     "#           derivative. These are needed to find the Christoffel\n",
     "#           symbols, which we need for covariant derivatives.\n",
     "gammaDD = ixp.register_gridfunctions_for_single_rank2(\"AUX\",\"gammaDD\", \"sym01\") # The AUX or EVOL designation is *not*\n",
@@ -118,6 +111,8 @@
     "gammaDD_dD = ixp.declarerank3(\"gammaDD_dD\",\"sym01\")\n",
     "gammaDD_dDD = ixp.declarerank4(\"gammaDD_dDD\",\"sym01_sym23\")\n",
     "\n",
+    "gammaUU = ixp.declarerank3(\"gammaUU\",\"sym01\")\n",
+    "detgamma = gri.register_gridfunctions(\"AUX\",[\"detgamma\"])\n",
     "gammaUU, detgamma = ixp.symm_matrix_inverter3x3(gammaDD)\n",
     "gammaUU_dD = ixp.declarerank3(\"gammaDD_dD\",\"sym01\")\n",
     "\n",
@@ -201,14 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:20.190643Z",
-     "iopub.status.busy": "2020-12-17T02:05:20.180484Z",
-     "iopub.status.idle": "2020-12-17T02:05:20.396929Z",
-     "shell.execute_reply": "2020-12-17T02:05:20.396459Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# First, we must construct the lowered Christoffel symbols:\n",
@@ -276,7 +264,7 @@
     "#    lhrh_list.append(lhrh(lhs=gri.gfaccess(\"rhs_gfs\", \"AD\" + str(i)), rhs=ArhsD[i]))\n",
     "#    lhrh_list.append(lhrh(lhs=gri.gfaccess(\"rhs_gfs\", \"ED\" + str(i)), rhs=ErhsD[i]))\n",
     "#lhrh_list.append(lhrh(lhs=gri.gfaccess(\"rhs_gfs\", \"psi\"), rhs=psi_rhs))\n",
-    "\n",
+    "    \n",
     "#fin.FD_outputC(\"stdout\", lhrh_list)"
    ]
   },
@@ -302,14 +290,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:20.419989Z",
-     "iopub.status.busy": "2020-12-17T02:05:20.419463Z",
-     "iopub.status.idle": "2020-12-17T02:05:20.426378Z",
-     "shell.execute_reply": "2020-12-17T02:05:20.425937Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ED_dD = ixp.declarerank2(\"ED_dD\",\"nosym\")\n",
@@ -317,7 +298,7 @@
     "Cviolation = sp.sympify(0)\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        Cviolation += gammaUU[i][j] * ED_dD[j][i]\n",
+    "        Cviolation += gammaUU[i][j] * ED_dD[j][i] \n",
     "        for b in range(DIM):\n",
     "            Cviolation -= gammaUU[i][j] * GammaUDD[b][i][j] * ED[b]"
    ]
@@ -340,14 +321,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:20.431430Z",
-     "iopub.status.busy": "2020-12-17T02:05:20.430892Z",
-     "iopub.status.idle": "2020-12-17T02:05:20.953138Z",
-     "shell.execute_reply": "2020-12-17T02:05:20.953534Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -399,14 +373,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:20.980709Z",
-     "iopub.status.busy": "2020-12-17T02:05:20.965456Z",
-     "iopub.status.idle": "2020-12-17T02:05:20.988854Z",
-     "shell.execute_reply": "2020-12-17T02:05:20.988509Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# We inherit here all of the definitions from System I, above\n",
@@ -443,7 +410,7 @@
     "    ErhsD[i] = -LapAD[i] + Gamma_dD[i]\n",
     "psi_rhs = -Gamma\n",
     "Gamma_rhs = -Lappsi\n",
-    "\n",
+    "    \n",
     "# Step 10: Generate C code for System II Maxwell's evolution equations,\n",
     "#          print output to the screen (standard out, or stdout).\n",
     "#lhrh_list = []\n",
@@ -452,7 +419,7 @@
     "#    lhrh_list.append(lhrh(lhs=gri.gfaccess(\"rhs_gfs\", \"ED\" + str(i)), rhs=ErhsD[i]))\n",
     "#lhrh_list.append(lhrh(lhs=gri.gfaccess(\"rhs_gfs\", \"psi\"), rhs=psi_rhs))\n",
     "#lhrh_list.append(lhrh(lhs=gri.gfaccess(\"rhs_gfs\", \"Gamma\"), rhs=Gamma_rhs))\n",
-    "\n",
+    "    \n",
     "#fin.FD_outputC(\"stdout\", lhrh_list)"
    ]
   },
@@ -474,14 +441,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:21.020861Z",
-     "iopub.status.busy": "2020-12-17T02:05:21.005569Z",
-     "iopub.status.idle": "2020-12-17T02:05:21.381987Z",
-     "shell.execute_reply": "2020-12-17T02:05:21.381505Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -557,19 +517,12 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:21.395372Z",
-     "iopub.status.busy": "2020-12-17T02:05:21.390645Z",
-     "iopub.status.idle": "2020-12-17T02:05:21.398843Z",
-     "shell.execute_reply": "2020-12-17T02:05:21.398372Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Step 1: Declare free parameters intrinsic to these initial data\n",
     "amp,lam = par.Cparameters(\"REAL\",thismodule,\n",
-    "                          [\"amp\",\"lam\"],\n",
+    "                          [\"amp\",\"lam\"], \n",
     "                          [1.0,1.0]) # __name__ = \"MaxwellCartesian_ID\", this module's name\n",
     "\n",
     "# Step 2: Set the initial data\n",
@@ -583,11 +536,11 @@
     "EU_phi = 8*amp*radial*sp.sin(polar)*lam*lam*sp.exp(-lam*radial*radial)\n",
     "EidU[0] = -(y * EU_phi)/sp.sqrt(x*x + y*y)\n",
     "EidU[1] =  (x * EU_phi)/sp.sqrt(x*x + y*y)\n",
-    "# The z component (2)is zero.\n",
+    "# The z component (2)is zero. \n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        EidD[i] += gammaDD[i][j] * EidU[j]\n",
-    "\n",
+    "      \n",
     "psi_ID = sp.sympify(0)\n",
     "Gamma_ID = sp.sympify(0)"
    ]
@@ -612,14 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:21.405764Z",
-     "iopub.status.busy": "2020-12-17T02:05:21.401832Z",
-     "iopub.status.idle": "2020-12-17T02:05:21.408098Z",
-     "shell.execute_reply": "2020-12-17T02:05:21.408428Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -664,14 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:21.420697Z",
-     "iopub.status.busy": "2020-12-17T02:05:21.419209Z",
-     "iopub.status.idle": "2020-12-17T02:05:21.421872Z",
-     "shell.execute_reply": "2020-12-17T02:05:21.422301Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -723,33 +662,36 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:21.425302Z",
-     "iopub.status.busy": "2020-12-17T02:05:21.424783Z",
-     "iopub.status.idle": "2020-12-17T02:05:23.673687Z",
-     "shell.execute_reply": "2020-12-17T02:05:23.673129Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created Tutorial-MaxwellCartesian.tex, and compiled LaTeX file to PDF file\n",
-      "    Tutorial-MaxwellCartesian.pdf\n"
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n",
+      "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\r\n",
+      " restricted \\write18 enabled.\r\n",
+      "entering extended mode\r\n"
      ]
     }
    ],
    "source": [
-    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-MaxwellCartesian\")"
+    "!jupyter nbconvert --to latex --template latex_nrpy_style.tplx --log-level='WARN' Tutorial-MaxwellCartesian.ipynb\n",
+    "!pdflatex -interaction=batchmode Tutorial-MaxwellCartesian.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-MaxwellCartesian.tex\n",
+    "!pdflatex -interaction=batchmode Tutorial-MaxwellCartesian.tex\n",
+    "!rm -f Tut*.out Tut*.aux Tut*.log"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python3"
   },
@@ -763,7 +705,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.1"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
