Tutorial-cmdline_helper.ipynb, cmdline_helper.py: Add support for linking against additional libraries

--- a/Tutorial-cmdline_helper.ipynb
+++ b/Tutorial-cmdline_helper.ipynb
@@ -73,15 +73,7 @@
      "shell.execute_reply": "2021-01-16T21:04:00.342249Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing cmdline_helper-validation.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile cmdline_helper-validation.py\n",
     "# As documented in the NRPy+ tutorial notebook\n",
@@ -142,15 +134,7 @@
      "shell.execute_reply": "2021-01-16T21:04:00.346936Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to cmdline_helper-validation.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a cmdline_helper-validation.py\n",
     "\n",
@@ -199,23 +183,18 @@
      "shell.execute_reply": "2021-01-16T21:04:00.352682Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to cmdline_helper-validation.py\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%writefile -a cmdline_helper-validation.py\n",
     "\n",
     "# C_compile(): Write a function to compile the Main C code into an executable file\n",
-    "def C_compile(main_C_output_path, main_C_output_file, compile_mode=\"optimized\", custom_compile_string=\"\"):\n",
+    "def C_compile(main_C_output_path, main_C_output_file, compile_mode=\"optimized\", custom_compile_string=\"\", additional_libraries=\"\"):\n",
     "    print(\"Compiling executable...\")\n",
     "    # Step 1: Check for gcc compiler\n",
     "    check_executable_exists(\"gcc\")\n",
+    "\n",
+    "    if additional_libraries != \"\":\n",
+    "        additional_libraries = \" \" + additional_libraries\n",
     "\n",
     "    # Step 2: Delete existing version of executable\n",
     "    if os.name == \"nt\":\n",
@@ -224,20 +203,20 @@
     "\n",
     "    # Step 3: Compile the executable\n",
     "    if compile_mode==\"safe\":\n",
-    "        compile_string = \"gcc -O2 -g -fopenmp \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"\n",
+    "        compile_string = \"gcc -O2 -g -fopenmp \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"+additional_libraries\n",
     "        Execute_input_string(compile_string, os.devnull)\n",
     "        # Check if executable exists (i.e., compile was successful), if not, try with more conservative compile flags.\n",
     "        if not os.path.isfile(main_C_output_file):\n",
     "            # Step 3.A: Revert to more compatible gcc compile option\n",
     "            print(\"Most safe failed. Removing -fopenmp:\")\n",
-    "            compile_string = \"gcc -O2 \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"\n",
+    "            compile_string = \"gcc -O2 \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"+additional_libraries\n",
     "            Execute_input_string(compile_string, os.devnull)\n",
     "        if not os.path.isfile(main_C_output_file):\n",
     "            print(\"Sorry, compilation failed\")\n",
     "            sys.exit(1)\n",
     "    elif compile_mode==\"icc\":\n",
     "        check_executable_exists(\"icc\")\n",
-    "        compile_string = \"icc -O2 -xHost -qopenmp -unroll \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"\n",
+    "        compile_string = \"icc -O2 -xHost -qopenmp -unroll \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"+additional_libraries\n",
     "        Execute_input_string(compile_string, os.devnull)\n",
     "        # Check if executable exists (i.e., compile was successful), if not, try with more conservative compile flags.\n",
     "        if not os.path.isfile(main_C_output_file):\n",
@@ -250,18 +229,18 @@
     "            print(\"Sorry, compilation failed\")\n",
     "            sys.exit(1)\n",
     "    elif compile_mode==\"optimized\":\n",
-    "        compile_string = \"gcc -Ofast -fopenmp -march=native -funroll-loops \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"\n",
+    "        compile_string = \"gcc -Ofast -fopenmp -march=native -funroll-loops \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"+additional_libraries\n",
     "        Execute_input_string(compile_string, os.devnull)\n",
     "        # Check if executable exists (i.e., compile was successful), if not, try with more conservative compile flags.\n",
     "        if not os.path.isfile(main_C_output_file):\n",
     "            # Step 3.A: Revert to more compatible gcc compile option\n",
     "            print(\"Most optimized compilation failed. Removing -march=native:\")\n",
-    "            compile_string = \"gcc -Ofast -fopenmp -funroll-loops \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"\n",
+    "            compile_string = \"gcc -Ofast -fopenmp -funroll-loops \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"+additional_libraries\n",
     "            Execute_input_string(compile_string, os.devnull)\n",
     "        if not os.path.isfile(main_C_output_file):\n",
     "            # Step 3.B: Revert to maximally compatible gcc compile option\n",
     "            print(\"Next-to-most optimized compilation failed. Moving to maximally-compatible gcc compile option:\")\n",
-    "            compile_string = \"gcc -O2 \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"\n",
+    "            compile_string = \"gcc -O2 \"+str(main_C_output_path)+\" -o \"+str(main_C_output_file)+\" -lm\"+additional_libraries\n",
     "            Execute_input_string(compile_string, os.devnull)\n",
     "        # Step 3.C: If there are still missing components within the compiler, say compilation failed\n",
     "        if not os.path.isfile(main_C_output_file):\n",
