Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy-1D_tests: Added C parameter file generation code that was accidentally removed.

--- a/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy-1D_tests.ipynb
+++ b/in_progress/Tutorial-Start_to_Finish_UnitTest-GiRaFFEfood_NRPy-1D_tests.ipynb
@@ -341,7 +341,10 @@
     "params.invdx0 = 1.0 / params.dxx0;\n",
     "params.invdx1 = 1.0 / params.dxx1;\n",
     "params.invdx2 = 1.0 / params.dxx2;\n",
-    "\\n\"\"\")"
+    "\\n\"\"\")\n",
+    "\n",
+    "# Generates declare_Cparameters_struct.h, set_Cparameters_default.h, and set_Cparameters[-SIMD].h\n",
+    "par.generate_Cparameters_Ccodes(os.path.join(out_dir))"
    ]
   },
   {
@@ -739,11 +742,11 @@
      "text": [
       "Now compiling, should take ~2 seconds...\n",
       "\n",
-      "Finished in 1.1340968608856201 seconds.\n",
+      "Finished in 1.2637443542480469 seconds.\n",
       "\n",
       "\n",
       "(EXEC): Executing `taskset -c 0,1,2,3 ./GiRaFFEfood_NRPy_unit_test 0`...\n",
-      "(BENCH): Finished executing in 0.2090928554534912 seconds.\n"
+      "(BENCH): Finished executing in 0.2098681926727295 seconds.\n"
      ]
     }
    ],
