Tutorial-GiRaFFEfood_NRPy: Continued updates to the new infrastructure and more work on Split Monopole.

--- a/in_progress/Tutorial-GiRaFFEfood_NRPy.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy.ipynb
@@ -176,9 +176,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def GiRaFFEfood_NRPy_1D_tests(ID_type = \"DegenAlfvenWave\", stagger_enable = False):\n",
-    "#     global AD, ValenciaVU\n",
-    "#     AD = ixp.zerorank1()\n",
+    "def GiRaFFEfood_NRPy_generate_initial_data(ID_type = \"DegenAlfvenWave\", stagger_enable = False):\n",
+    "    global AD, ValenciaVU\n",
     "#     if ID_type == \"DegenAlfvenWave\":\n",
     "#         mu_DAW = par.Cparameters(\"REAL\",thismodule,[\"mu_DAW\"], -0.5) # The wave speed\n",
     "#         AD = Axyz_func(Ax_DAW, Ay_DAW, Az_DAW, stagger_enable,\n",
@@ -186,7 +185,10 @@
     "#         ValenciaVU = ValenciavU_DAW(mu_DAW=mu_DAW, gammamu=gammamu)\n",
     "#     elif ID_type == \"FastWave\":\n",
     "#         AD = Axyz_func(Ax_FW, Ay_FW, Az_FW, stagger_enable)\n",
-    "#         ValenciaVU = ValenciavU_FW()"
+    "#         ValenciaVU = ValenciavU_FW()\n",
+    "    if ID_type == \"SplitMonopole\":\n",
+    "        import GiRaFFEfood_NRPy_Split_Monopole\n",
+    "        AD = Axyz_func(Ax_SM,Ay_SM,Az_SM,stagger_enable)"
    ]
   }
  ],
