--- a/Tutorial-LaTeX_Parser_Interface.ipynb
+++ b/Tutorial-LaTeX_Parser_Interface.ipynb
@@ -75,14 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-12-17T02:05:07.836068Z",
-     "iopub.status.busy": "2020-12-17T02:05:07.835559Z",
-     "iopub.status.idle": "2020-12-17T02:05:08.004534Z",
-     "shell.execute_reply": "2020-12-17T02:05:08.003936Z"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from parse_latex import *\n",
@@ -565,20 +558,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('epsilonDDD', 'vU', 'wU', 'uD')\n"
+      "('vU', 'wU', 'epsilonDDD', 'uD')\n"
      ]
     },
     {
      "data": {
       "text/latex": [
        "\\[\n",
-       "    % vardef -permutation 'epsilonDDD' (3D)\n",
        "    % vardef 'vU' (3D), 'wU' (3D)\n",
        "    u_i = \\epsilon_{ijk} v^j w^k\n",
        "\\]"
       ],
       "text/plain": [
-       "('epsilonDDD', 'vU', 'wU', 'uD')"
+       "('vU', 'wU', 'epsilonDDD', 'uD')"
       ]
      },
      "metadata": {},
@@ -587,7 +579,6 @@
    ],
    "source": [
     "output = parse(r\"\"\"\n",
-    "    % vardef -permutation 'epsilonDDD' (3D)\n",
     "    % vardef 'vU' (3D), 'wU' (3D)\n",
     "    u_i = \\epsilon_{ijk} v^j w^k\n",
     "\"\"\")\n",
@@ -663,8 +654,8 @@
      "data": {
       "text/latex": [
        "\\[\n",
-       "    % vardef -numeric -anti01 'FUU' (4D)\n",
-       "    % vardef -numeric -metric 'gDD' (4D)\n",
+       "    % vardef -diff_type=dD -symmetry=anti01 'FUU' (4D)\n",
+       "    % vardef -diff_type=dD -metric 'gDD' (4D)\n",
        "    % vardef -const 'k'\n",
        "    J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu}\n",
        "\\]"
@@ -688,8 +679,8 @@
    ],
    "source": [
     "output = parse(r\"\"\"\n",
-    "    % vardef -numeric -anti01 'FUU' (4D)\n",
-    "    % vardef -numeric -metric 'gDD' (4D)\n",
+    "    % vardef -diff_type=dD -symmetry=anti01 'FUU' (4D)\n",
+    "    % vardef -diff_type=dD -metric 'gDD' (4D)\n",
     "    % vardef -const 'k'\n",
     "    J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu}\n",
     "\"\"\")\n",
@@ -719,11 +710,11 @@
      "data": {
       "text/latex": [
        "\\[\n",
-       "    % vardef -anti01 'FUU' (4D)\n",
-       "    % vardef -metric 'ghatDD' (4D)\n",
+       "    % vardef -diff_type=dD -symmetry=anti01 'FUU' (4D)\n",
+       "    % vardef -diff_type=dD -metric 'ghatDD' (4D)\n",
        "    % vardef -const 'k'\n",
        "    J^\\mu = (4\\pi k)^{-1}\n",
-       "        \\vphantom{numeric} \\hat{\\nabla}_\\nu F^{\\mu\\nu}\n",
+       "        \\vphantom{dD} \\hat{\\nabla}_\\nu F^{\\mu\\nu}\n",
        "\\]"
       ],
       "text/plain": [
@@ -745,11 +736,11 @@
    ],
    "source": [
     "output = parse(r\"\"\"\n",
-    "    % vardef -anti01 'FUU' (4D)\n",
-    "    % vardef -metric 'ghatDD' (4D)\n",
+    "    % vardef -diff_type=dD -symmetry=anti01 'FUU' (4D)\n",
+    "    % vardef -diff_type=dD -metric 'ghatDD' (4D)\n",
     "    % vardef -const 'k'\n",
     "    J^\\mu = (4\\pi k)^{-1}\n",
-    "        \\vphantom{numeric} \\hat{\\nabla}_\\nu F^{\\mu\\nu}\n",
+    "        \\vphantom{dD} \\hat{\\nabla}_\\nu F^{\\mu\\nu}\n",
     "\"\"\")\n",
     "print(output); display(output)"
    ]
@@ -778,27 +769,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('deltaDD', 'gDD', 'epsilonUUUU', 'gdet', 'gUU')\n"
+      "('gDD', 'epsilonUUUU', 'gdet', 'gUU')\n"
      ]
     },
     {
      "data": {
       "text/latex": [
        "\\[\n",
-       "    % vardef -kronecker 'deltaDD' (4D)\n",
-       "    % vardef -empty 'gDD' (4D)\n",
+       "    % keydef basis [t, r, \\theta, \\phi]\n",
+       "    % vardef -zero 'gDD' (4D)\n",
        "    % vardef -const 'G', 'M'\n",
        "    \\begin{align}\n",
-       "        g_{0 0} &= -\\left(1 - \\frac{2GM}{r}\\right) \\\\\n",
-       "        g_{1 1} &=  \\left(1 - \\frac{2GM}{r}\\right)^{-1} \\\\\n",
-       "        g_{2 2} &= r^{{2}} \\\\\n",
-       "        g_{3 3} &= r^{{2}} \\sin^2\\theta\n",
+       "        g_{t t} &= -\\left(1 - \\frac{2GM}{r}\\right) \\\\\n",
+       "        g_{r r} &=  \\left(1 - \\frac{2GM}{r}\\right)^{-1} \\\\\n",
+       "        g_{\\theta \\theta} &= r^{{2}} \\\\\n",
+       "        g_{\\phi \\phi} &= r^{{2}} \\sin^2\\theta\n",
        "    \\end{align}\n",
        "    % assign -metric 'gDD'\n",
        "\\]"
       ],
       "text/plain": [
-       "('deltaDD', 'gDD', 'epsilonUUUU', 'gdet', 'gUU')"
+       "('gDD', 'epsilonUUUU', 'gdet', 'gUU')"
       ]
      },
      "metadata": {},
@@ -807,14 +798,14 @@
    ],
    "source": [
     "output = parse(r\"\"\"\n",
-    "    % vardef -kronecker 'deltaDD' (4D)\n",
-    "    % vardef -empty 'gDD' (4D)\n",
+    "    % keydef basis [t, r, \\theta, \\phi]\n",
+    "    % vardef -zero 'gDD' (4D)\n",
     "    % vardef -const 'G', 'M'\n",
     "    \\begin{align}\n",
-    "        g_{0 0} &= -\\left(1 - \\frac{2GM}{r}\\right) \\\\\n",
-    "        g_{1 1} &=  \\left(1 - \\frac{2GM}{r}\\right)^{-1} \\\\\n",
-    "        g_{2 2} &= r^{{2}} \\\\\n",
-    "        g_{3 3} &= r^{{2}} \\sin^2\\theta\n",
+    "        g_{t t} &= -\\left(1 - \\frac{2GM}{r}\\right) \\\\\n",
+    "        g_{r r} &=  \\left(1 - \\frac{2GM}{r}\\right)^{-1} \\\\\n",
+    "        g_{\\theta \\theta} &= r^{{2}} \\\\\n",
+    "        g_{\\phi \\phi} &= r^{{2}} \\sin^2\\theta\n",
     "    \\end{align}\n",
     "    % assign -metric 'gDD'\n",
     "\"\"\")\n",
@@ -886,7 +877,6 @@
      "data": {
       "text/latex": [
        "\\[\n",
-       "    % keydef basis [t, r, \\theta, \\phi]\n",
        "    \\begin{align}\n",
        "        R^\\alpha{}_{\\beta\\mu\\nu} &= \\partial_\\mu \\Gamma^\\alpha_{\\beta\\nu}\n",
        "            - \\partial_\\nu \\Gamma^\\alpha_{\\beta\\mu}\n",
@@ -911,7 +901,6 @@
    ],
    "source": [
     "output = parse(r\"\"\"\n",
-    "    % keydef basis [t, r, \\theta, \\phi]\n",
     "    \\begin{align}\n",
     "        R^\\alpha{}_{\\beta\\mu\\nu} &= \\partial_\\mu \\Gamma^\\alpha_{\\beta\\nu}\n",
     "            - \\partial_\\nu \\Gamma^\\alpha_{\\beta\\mu}\n",
@@ -1205,8 +1194,8 @@
        "    \\begin{align}\n",
        "        \\gamma_{ij} &= g_{ij} \\\\\n",
        "        % assign -metric 'gammaDD'\n",
-       "        \\beta_i &= g_{0 i} \\\\\n",
-       "        \\alpha &= \\sqrt{\\gamma^{ij}\\beta_i\\beta_j - g_{0 0}} \\\\\n",
+       "        \\beta_i &= g_{r i} \\\\\n",
+       "        \\alpha &= \\sqrt{\\gamma^{ij}\\beta_i\\beta_j - g_{r r}} \\\\\n",
        "        K_{ij} &= \\frac{1}{2\\alpha}\\left(\\nabla_i \\beta_j + \\nabla_j \\beta_i\\right) \\\\\n",
        "        K &= \\gamma^{ij} K_{ij}\n",
        "    \\end{align}\n",
@@ -1233,8 +1222,8 @@
     "    \\begin{align}\n",
     "        \\gamma_{ij} &= g_{ij} \\\\\n",
     "        % assign -metric 'gammaDD'\n",
-    "        \\beta_i &= g_{0 i} \\\\\n",
-    "        \\alpha &= \\sqrt{\\gamma^{ij}\\beta_i\\beta_j - g_{0 0}} \\\\\n",
+    "        \\beta_i &= g_{r i} \\\\\n",
+    "        \\alpha &= \\sqrt{\\gamma^{ij}\\beta_i\\beta_j - g_{r r}} \\\\\n",
     "        K_{ij} &= \\frac{1}{2\\alpha}\\left(\\nabla_i \\beta_j + \\nabla_j \\beta_i\\right) \\\\\n",
     "        K &= \\gamma^{ij} K_{ij}\n",
     "    \\end{align}\n",
@@ -1555,7 +1544,7 @@
    "source": [
     "%%parse_latex\n",
     "\n",
-    "% vardef -anti01 'FUU' (4D)\n",
+    "% vardef -symmetry=anti01 'FUU' (4D)\n",
     "% vardef -const 'k'\n",
     "J^\\mu = (4\\pi k)^{-1} \\nabla_\\nu F^{\\mu\\nu}"
    ]
