--- a/Tutorial-LaTeX_Parser_Interface.ipynb
+++ b/Tutorial-LaTeX_Parser_Interface.ipynb
@@ -942,7 +942,7 @@
        "[0, 0, 0, 0]])"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1391,9 +1391,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorError: illegal bound index\n",
+      "TensorError: illegal bound index 'nu'\n",
       "\n",
-      "Tensor(vU, mu) = Tensor(uD, nu)*Tensor(TUD, mu, nu)\n"
+      "v^\\mu = T^\\mu_\\nu u_\\nu\n",
+      "\n"
      ]
     }
    ],
@@ -1420,9 +1421,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorError: unbalanced free index\n",
+      "TensorError: unbalanced free index {'mu', 'nu'}\n",
       "\n",
-      "Tensor(vU, mu) = Tensor(uD, mu)*Tensor(TUD, mu, nu)\n"
+      "v^\\mu = T^\\mu_\\nu u_\\mu\n",
+      "\n"
      ]
     }
    ],
@@ -1632,7 +1634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.8.5"
   },
   "mimetype": "text/x-python",
   "name": "python",
