GiRaFFEfood_NRPy_Split_Monopole: Fixing coding mistakes.

--- a/in_progress/Tutorial-GiRaFFEfood_NRPy.ipynb
+++ b/in_progress/Tutorial-GiRaFFEfood_NRPy.ipynb
@@ -134,7 +134,7 @@
    "outputs": [],
    "source": [
     "# Generic function to convert contravariant vectors from a spherical to Cartesian basis.\n",
-    "def change_basis_spherical_to_Cartesian(somevector_sphD)\n",
+    "def change_basis_spherical_to_Cartesian(somevector_sphD):\n",
     "    # Use the Jacobian matrix to transform the vectors to Cartesian coordinates.\n",
     "    drrefmetric__dx_0UDmatrix = sp.Matrix([[sp.diff(rfm.xxSph[0],rfm.xx[0]), sp.diff(rfm.xxSph[0],rfm.xx[1]), sp.diff(rfm.xxSph[0],rfm.xx[2])],\n",
     "                                           [sp.diff(rfm.xxSph[1],rfm.xx[0]), sp.diff(rfm.xxSph[1],rfm.xx[1]), sp.diff(rfm.xxSph[1],rfm.xx[2])],\n",
@@ -144,7 +144,7 @@
     "\n",
     "    for i in range(3):\n",
     "        for j in range(3):\n",
-    "            somevectorD[i] = drrefmetric__dx_0UDmatrix[(j,i)]*vectors[j]\n",
+    "            somevectorD[i] = drrefmetric__dx_0UDmatrix[(j,i)]*somevector_sphD[j]\n",
     "\n",
     "    return somevectorD"
    ]
