parse_latex.py: improved srepl handling of text command
- removed resolution for scalar indexing ambiguity
- fixed issue with missing expression exponent

--- a/Tutorial-LaTeX_Parser_Interface.ipynb
+++ b/Tutorial-LaTeX_Parser_Interface.ipynb
@@ -1391,10 +1391,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorError: illegal bound index 'nu'\n",
-      "\n",
-      "v^\\mu = T^\\mu_\\nu u_\\nu\n",
-      "\n"
+      "TensorError: illegal bound index 'nu' in vU\n"
      ]
     }
    ],
@@ -1421,10 +1418,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorError: unbalanced free index {'mu', 'nu'}\n",
-      "\n",
-      "v^\\mu = T^\\mu_\\nu u_\\mu\n",
-      "\n"
+      "TensorError: unbalanced free index {'nu', 'mu'} in vU\n"
      ]
     }
    ],
