--- a/Tutorial-SEOBNR_Derivative_Routine.ipynb
+++ b/Tutorial-SEOBNR_Derivative_Routine.ipynb
@@ -110,7 +110,8 @@
      "iopub.status.busy": "2021-03-07T17:22:49.212777Z",
      "iopub.status.idle": "2021-03-07T17:22:49.777402Z",
      "shell.execute_reply": "2021-03-07T17:22:49.776841Z"
-    }
+    },
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -135,9 +136,17 @@
     "# Step 2.c: Separate and sympify right- and left-hand sides into separate arrays\n",
     "lhss = []\n",
     "rhss = []\n",
+    "\n",
+    "# As of April 2021, \"sp.sympify(\"Q+1\")\" fails because Q is a reserved keyword.\n",
+    "#   This is the workaround, courtesy Ken Sible.\n",
+    "custom_global_dict = {}\n",
+    "exec('from sympy import *', custom_global_dict)\n",
+    "del custom_global_dict['Q']\n",
+    "custom_parse_expr = lambda expr: sp.parse_expr(expr, global_dict=custom_global_dict)\n",
+    "\n",
     "for i in range(len(lr)):\n",
-    "    lhss.append(sp.sympify(lr[i].lhs))\n",
-    "    rhss.append(sp.sympify(lr[i].rhs))"
+    "    lhss.append(custom_parse_expr(lr[i].lhs))\n",
+    "    rhss.append(custom_parse_expr(lr[i].rhs))"
    ]
   },
   {
@@ -289,8 +298,8 @@
     "lhss_deriv = []\n",
     "rhss_deriv = []\n",
     "for i in range(len(rhss)):\n",
-    "    lhss_deriv.append(sp.sympify(str(lhss[i])+\"prm\"))\n",
-    "    newrhs = sp.sympify(str(sp.diff(rhss[i],xx)).replace(\"(xx)\",\"\").replace(\", xx\",\"prm\").replace(\"Derivative\",\"\"))\n",
+    "    lhss_deriv.append(custom_parse_expr(str(lhss[i])+\"prm\"))\n",
+    "    newrhs = custom_parse_expr(str(sp.diff(rhss[i],xx)).replace(\"(xx)\",\"\").replace(\", xx\",\"prm\").replace(\"Derivative\",\"\"))\n",
     "    rhss_deriv.append(newrhs)"
    ]
   },
@@ -558,7 +567,7 @@
     "def evaluate_expression(left_sides,right_sides,input_values):\n",
     "    new_right_sides = []\n",
     "    for i in range(len(right_sides)):\n",
-    "        term = sp.sympify(str(right_sides[i]).replace(\"(xx)\",\"\"))\n",
+    "        term = custom_parse_expr(str(right_sides[i]).replace(\"(xx)\",\"\"))\n",
     "        # Only look for the free variables in each expression to reduce computation time\n",
     "        free_vars = term.free_symbols\n",
     "        for variable in free_vars:\n",
@@ -647,8 +656,8 @@
     "    # Compare right-hand sides of the expressions by computing the difference between them\n",
     "    num_diffs = 0\n",
     "    for i in range(len(file1_lines)):\n",
-    "        expr_new = sp.sympify(file1_lines[i].split(\"=\")[1].replace(\"sp.\",\"\"))\n",
-    "        expr_validated = sp.sympify(file2_lines[i].split(\"=\")[1].replace(\"sp.\",\"\"))\n",
+    "        expr_new = custom_parse_expr(file1_lines[i].split(\"=\")[1].replace(\"sp.\",\"\"))\n",
+    "        expr_validated = custom_parse_expr(file2_lines[i].split(\"=\")[1].replace(\"sp.\",\"\"))\n",
     "        difference = sp.simplify(expr_new - expr_validated)\n",
     "        if difference != 0:\n",
     "            num_diffs += 1\n",
@@ -696,16 +705,8 @@
    ],
    "source": [
     "import cmdline_helper as cmd      # NRPy+: Multi-platform Python command-line interface\n",
-    "\n",
     "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-SEOBNR_Derivative_Routine\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -724,7 +725,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.2"
+   "version": "3.9.2"
   }
  },
  "nbformat": 4,
