SEOBNR_Derivative_Routine: SymPy 1.2 doesn't have parse_expr(). Implement workaround.

--- a/Tutorial-SEOBNR_Derivative_Routine.ipynb
+++ b/Tutorial-SEOBNR_Derivative_Routine.ipynb
@@ -142,7 +142,10 @@
     "custom_global_dict = {}\n",
     "exec('from sympy import *', custom_global_dict)\n",
     "del custom_global_dict['Q']\n",
-    "custom_parse_expr = lambda expr: sp.parse_expr(expr, global_dict=custom_global_dict)\n",
+    "if sympy_version_decimal > 1.2:\n",
+    "    custom_parse_expr = lambda expr: sp.parse_expr(expr, global_dict=custom_global_dict)\n",
+    "else:\n",
+    "    custom_parse_expr = lambda expr: sp.sympify(expr)\n",
     "\n",
     "for i in range(len(lr)):\n",
     "    lhss.append(custom_parse_expr(lr[i].lhs))\n",
