NRPyPN/NRPyPN.ipynb: Fix documentation -- should be TwoPunctures::give_bare_mass, not TwoPunctures::give_bare_masses. Thanks to Konrad Topolski for pointing this out!

--- a/NRPyPN/NRPyPN.ipynb
+++ b/NRPyPN/NRPyPN.ipynb
@@ -107,7 +107,7 @@
     "\n",
     "**If using `TwoPunctures`:** If you plan to use these parameters with TwoPunctures, you will need to set\n",
     "\n",
-    "* `TwoPunctures::give_bare_masses = no`\n",
+    "* `TwoPunctures::give_bare_mass = no`\n",
     "* `TwoPunctures::target_m_minus = ` $q/(1+q)$\n",
     "* `TwoPunctures::target_m_plus = ` $1/(1+q)$\n",
     "* `TwoPunctures::par_P_plus[0] = -|P_r|` (from code cell output below)\n",
@@ -186,7 +186,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
