BHAH: fixed small issues in the LaTeX generation of the BH@H tutorial notebooks

--- a/BHAH/Tutorial-BlackHolesAtHome-Compiling_the_BOINC_libraries.ipynb
+++ b/BHAH/Tutorial-BlackHolesAtHome-Compiling_the_BOINC_libraries.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,15 +212,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now compiling BOINC libraries (can take a few minutes depending on your internet connection) ...\n",
+      "Finished compiling BOINC libraries\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 3: Compile the BOINC libraries\n",
     "# FIXME: I don't think this is the best way of doing this.\n",
     "print(\"Now compiling BOINC libraries (can take a few minutes depending on your internet connection) ...\")\n",
     "status = os.system(\"source compile_BOINC_libraries.sh\")\n",
-    "print(\"Finished compiling BOINC libraries\" if status == 0 else \"Error: Something went wrong when compiling the BOINC libraries.\")"
+    "print(\"Finished compiling BOINC libraries\" if status == 0 \n",
+    "      else \"Error: Something went wrong when compiling the BOINC libraries.\")"
    ]
   },
   {
@@ -237,9 +247,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running hello_boinc program...\n",
+      "Hello BOINC!\n",
+      "All done!\n"
+     ]
+    }
+   ],
    "source": [
     "# Step 3: Compiling a test program\n",
     "# Step 3.a: Write down a \"Hello World!\" program that uses the BOINC libraries\n",
@@ -317,12 +337,12 @@
     "$$\\label{latex_pdf_output}$$\n",
     "\n",
     "The following code cell converts this Jupyter notebook into a proper, clickable $\\LaTeX$-formatted PDF file. After the cell is successfully run, the generated PDF may be found in the root NRPy+ tutorial directory, with filename\n",
-    "[Tutorial-BSSN_formulation.pdf](Tutorial-BSSN_formulation.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
+    "[Tutorial-BlackHolesAtHome-Compiling_the_BOINC_libraries.pdf](Tutorial-BlackHolesAtHome-Compiling_the_BOINC_libraries.pdf) (Note that clicking on this link may not work; you may need to open the PDF file through another means.)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:21:21.309338Z",
@@ -332,11 +352,21 @@
     },
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Created Tutorial-BlackHolesAtHome-Compiling_the_BOINC_libraries.tex, and\n",
+      "    compiled LaTeX file to PDF file Tutorial-BlackHolesAtHome-\n",
+      "    Compiling_the_BOINC_libraries.pdf\n"
+     ]
+    }
+   ],
    "source": [
-    "sys.path.append(\"..\")\n",
-    "import cmdline_helper as cmd    # NRPy+: Multi-platform Python command-line interface\n",
-    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-BOINC_docker_server_setup\")"
+    "!cp ../latex_nrpy_style.tplx .\n",
+    "cmd.output_Jupyter_notebook_to_LaTeXed_PDF(\"Tutorial-BlackHolesAtHome-Compiling_the_BOINC_libraries\")\n",
+    "!rm -f latex_nrpy_style.tplx"
    ]
   }
  ],
