updated NRPyLaTeX to version 1.0.5

--- a/Tutorial-SymPy_LaTeX_Interface.ipynb
+++ b/Tutorial-SymPy_LaTeX_Interface.ipynb
@@ -486,7 +486,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('gUU', 'epsilonDDD', 'gdet', 'gDD', 'vD', 'vU')\n"
+      "('gUU', 'epsilonDDD', 'gdet', 'gDD', 'GammaUDD', 'vD', 'vU')\n"
      ]
     },
     {
@@ -499,7 +499,7 @@
        "\\]"
       ],
       "text/plain": [
-       "('gUU', 'epsilonDDD', 'gdet', 'gDD', 'vD', 'vU')"
+       "('gUU', 'epsilonDDD', 'gdet', 'gDD', 'GammaUDD', 'vD', 'vU')"
       ]
      },
      "metadata": {},
@@ -661,7 +661,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "('FUU', 'gDD', 'epsilonUUUU', 'gdet', 'gUU', 'FUU_dD', 'gDD_dD', 'GammaUDD', 'FUU_cdD', 'JU')\n"
+      "('FUU', 'gDD', 'epsilonUUUU', 'gdet', 'gUU', 'gDD_dD', 'GammaUDD', 'FUU_dD', 'FUU_cdD', 'JU')\n"
      ]
     },
     {
@@ -680,9 +680,9 @@
        " 'epsilonUUUU',\n",
        " 'gdet',\n",
        " 'gUU',\n",
-       " 'FUU_dD',\n",
        " 'gDD_dD',\n",
        " 'GammaUDD',\n",
+       " 'FUU_dD',\n",
        " 'FUU_cdD',\n",
        " 'JU')"
       ]
@@ -787,14 +787,14 @@
        "\\begin{align}\n",
        "    g_{t t} &= -\\left(1 - \\frac{2GM}{r}\\right) \\\\\n",
        "    g_{r r} &=  \\left(1 - \\frac{2GM}{r}\\right)^{-1} \\\\\n",
-       "    g_{\\theta \\theta} &= r^{{2}} \\\\\n",
-       "    g_{\\phi \\phi} &= r^{{2}} \\sin^2\\theta\n",
+       "    g_{\\theta \\theta} &= r^2 \\\\\n",
+       "    g_{\\phi \\phi} &= r^2 \\sin^2\\theta\n",
        "\\end{align}\n",
        "% assign -metric 'gDD'\n",
        "\\]"
       ],
       "text/plain": [
-       "('gDD', 'epsilonUUUU', 'gdet', 'gUU')"
+       "('gDD', 'epsilonUUUU', 'gdet', 'gUU', 'GammaUDD')"
       ]
      },
      "execution_count": 21,
@@ -811,8 +811,8 @@
     "\\begin{align}\n",
     "    g_{t t} &= -\\left(1 - \\frac{2GM}{r}\\right) \\\\\n",
     "    g_{r r} &=  \\left(1 - \\frac{2GM}{r}\\right)^{-1} \\\\\n",
-    "    g_{\\theta \\theta} &= r^{{2}} \\\\\n",
-    "    g_{\\phi \\phi} &= r^{{2}} \\sin^2\\theta\n",
+    "    g_{\\theta \\theta} &= r^2 \\\\\n",
+    "    g_{\\phi \\phi} &= r^2 \\sin^2\\theta\n",
     "\\end{align}\n",
     "% assign -metric 'gDD'"
    ]
@@ -886,7 +886,7 @@
        "\\]"
       ],
       "text/plain": [
-       "('GammaUDD', 'RUDDD', 'RUUUU', 'RDDDD', 'K', 'RDD', 'R', 'GDD')"
+       "('RUDDD', 'RUUUU', 'RDDDD', 'K', 'RDD', 'R', 'GDD')"
       ]
      },
      "execution_count": 23,
@@ -1401,7 +1401,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "TensorError: unbalanced free index {'mu', 'nu'} in vU\n"
+      "TensorError: unbalanced free index {'nu', 'mu'} in vU\n"
      ]
     }
    ],
@@ -1473,64 +1473,6 @@
    "execution_count": 40,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-03-07T17:14:27.184871Z",
-     "iopub.status.busy": "2021-03-07T17:14:27.184190Z",
-     "iopub.status.idle": "2021-03-07T17:14:27.187437Z",
-     "shell.execute_reply": "2021-03-07T17:14:27.186928Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ParseError: cannot differentiate symbolically without specifying a basis\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%parse_latex\n",
-    "\n",
-    "% vardef 'vD' (2D)\n",
-    "v_0 = x^{{2}} + 2x \\\\\n",
-    "v_1 = y\\sqrt{x} \\\\\n",
-    "T_{\\mu\\nu} = \\partial_\\nu v_\\mu"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2021-03-07T17:14:27.192705Z",
-     "iopub.status.busy": "2021-03-07T17:14:27.192075Z",
-     "iopub.status.idle": "2021-03-07T17:14:27.195308Z",
-     "shell.execute_reply": "2021-03-07T17:14:27.194733Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ParseError: R^\\alpha_{\\beta\\mu\\nu} = \\partial_\\mu \\Gamma^\\alpha_{\\beta\\nu} - \\partial_\\nu \\Gamma^\\alpha_{\\beta\\mu}\n",
-      "                                                  ^\n",
-      "cannot generate christoffel symbol without defined metric 'g'\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%parse_latex\n",
-    "\n",
-    "R^\\alpha{}_{\\beta\\mu\\nu} = \\partial_\\mu \\Gamma^\\alpha_{\\beta\\nu} - \\partial_\\nu \\Gamma^\\alpha_{\\beta\\mu}\n",
-    "    + \\Gamma^\\alpha_{\\mu\\gamma}\\Gamma^\\gamma_{\\beta\\nu} - \\Gamma^\\alpha_{\\nu\\sigma}\\Gamma^\\sigma_{\\beta\\mu}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {
-    "execution": {
      "iopub.execute_input": "2021-03-07T17:14:27.201756Z",
      "iopub.status.busy": "2021-03-07T17:14:27.201139Z",
      "iopub.status.idle": "2021-03-07T17:14:27.203716Z",
@@ -1569,7 +1511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 41,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-03-07T17:14:27.208787Z",
